--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andreas Tak</title>
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, React, Portfolio, Frontend"
+    />
+    <meta name="description" content="My Portfolio as an Frontend Developer" />
+    <meta name="author" content="Andreas Takvam" />
+    <title>Andreas Takvam</title>
   </head>
   <body>
     <div id="root"></div>
